add tipo cambio por dia
