# src/routes/endpoints.js
@@ -10,11 +10,12 @@ const initializeEndPoints = (app) => {
     app.get("/public/api/sunat/ruc/:ruc", consulta.searchRuc);
     app.get("/public/api/tc-sunat/actual", consulta.getSunatTipoCambioActual);
     app.get("/public/api/tc-sunat/:year/:month", consulta.getSunatTipoCambio);
+    app.get("/public/api/tc-sunat/:year/:month/:day", consulta.getSunatTipoCambioPorDia);
   
     //jne
     app.get("/public/api/jne/dni/:dni", consulta.searchDni); 
 
     //essalud
-    app.get("/public/api/essalud/dni/:dni", consulta.searchEssaluedDni); 
+    app.get("/public/api/essalud/dni/:dni", consulta.searchEssaludDni); 
 };
 module.exports = initializeEndPoints;
